@@ -22,5 +22,7 @@ PHP                                                                        NEWS
   (Derick)
 - Fixed bug #34277 (array_filter() crashes with references and objects).
   (Dmitry)
+- Fixed bug #34137 (assigning array element by reference causes binary mess).
+  (Dmitry) 
 - Fixed bug #33957 (gmdate('W')/date('W') sometimes returns wrong week number).
   (Derick)
